cabal-version:       3.4
name:                haga
version:             0.1.0.0
synopsis:            Simplistic genetic algorithms library
description:         Haga is a simplistic library for implementing genetic
                     algorithms in Haskell. While it was originally created to
                     randomly assign topics to students in seminars while
                     respecting their priorities, since then, it has become
                     slightly more general with the outlook of one day being a
                     fully fledged GA library usable for many different
                     problems. Haga is also used as a test bed for fun ideas
                     such as representing improvements in the population's
                     fitness using MIDI sound.
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Pätzel
maintainer:          david.paetzel@posteo.de
copyright:           Copyright (c): 2020 David Pätzel
category:            Optimization
build-type:          Simple

library
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , extra
                     , hint
                     , monad-loops
                     , MonadRandom
                     , mwc-random
                     , optparse-applicative
                     , parallel
                     , path
                     , pipes
                     , primitive
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , random-fu
                     , random-shuffle
                     , text
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-orphans -O2
  hs-source-dirs:      lib, lambda/lib
  other-modules:       CommonDefinition
  exposed-modules:     GA
                     , LambdaCalculus
                     , Pretty
                     , Utils
                     , LambdaDatasets.NurseryDefinition
                     , LambdaDatasets.GermanDefinition
                     , LambdaDatasets.IrisDefinition

executable haga-lambda
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , extra
                     , hint
                     , haga
                     , monad-loops
                     , MonadRandom
                     , mwc-random
                     , optparse-applicative
                     , parallel
                     , path
                     , pipes
                     , primitive
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , random-fu
                     , random-shuffle
                     , text
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-orphans -threaded -rtsopts -O2
  hs-source-dirs:      lambda/src
  main-is:             Main.hs
  other-modules:       LambdaDatasets.NurseryDataset
                     , LambdaDatasets.NurseryData
                     , LambdaDatasets.GermanDataset
                     , LambdaDatasets.GermanData
                     , LambdaDatasets.IrisDataset
                     , LambdaDatasets.IrisData

executable haga-students
  build-depends:       base
                     , extra
                     , haga
                     , optparse-applicative
                     , protolude
                     , pipes
                     , QuickCheck
                     , quickcheck-instances
                     , random-fu
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-orphans -threaded -rtsopts -O2
  hs-source-dirs:      src-students
  main-is:             Main.hs
  other-modules:       Seminar
                     , Szenario191

executable haga-test
  build-depends:       base
                     , bytestring
                     , Cabal
                     , cassava
                     , containers
                     , extra
                     , haga
                     , hint
                     , monad-loops
                     , MonadRandom
                     , mwc-random
                     , optparse-applicative
                     , parallel
                     , path
                     , pipes
                     , primitive
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , random-fu
                     , random-shuffle
                     , text
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-orphans -threaded -rtsopts -O2
  hs-source-dirs:      lib
  main-is:             Test.hs
